feat: implement movie details view with routing and service integration

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -163,39 +163,39 @@
         <div class="trending-slider cr">
           <owl-carousel-o [options]="customOptions_trending">
             @for(movie of movies ; track movie.id){
-            <ng-template carouselSlide>
-              <div class="image">
-                <img
-                  [src]="image_path + movie.poster_path"
-                  [alt]="movie.title"
-                />
-                <div class="overlay">
-                  <div class="movie-footer">
-                    <div class="movie-info">
-                      <h6>{{ movie.title }}</h6>
-                      <p>{{ movie.release_date | date : "yyyy" }}</p>
-                      <span>
-                        {{ movie.vote_average | number : "1.1-1" }}
-                        <i
-                          *ngFor="let star of getStarRating(movie.vote_average)"
-                          class="fa-solid fa-star"
-                          [ngClass]="{ filled: star === 1, empty: star === 0 }"
-                        >
-                        </i>
-                      </span>
-                    </div>
-                    <div class="movie-btns">
-                      <button class="watch-btn">
-                        <i class="fa-solid fa-play"></i> Watch now
-                      </button>
-                      <button id="plus-btn">
-                        <i class="fa-solid fa-plus"></i>
-                      </button>
+              <ng-template carouselSlide>
+                <div class="image" [routerLink]="['/details', movie.id]">
+                  <img
+                    [src]="image_path + movie.poster_path"
+                    [alt]="movie.title"
+                  />
+                  <div class="overlay">
+                    <div class="movie-footer">
+                      <div class="movie-info">
+                        <h6>{{ movie.title }}</h6>
+                        <p>{{ movie.release_date | date : "yyyy" }}</p>
+                        <span>
+                          {{ movie.vote_average | number : "1.1-1" }}
+                          <i
+                            *ngFor="let star of getStarRating(movie.vote_average)"
+                            class="fa-solid fa-star"
+                            [ngClass]="{ filled: star === 1, empty: star === 0 }"
+                          >
+                          </i>
+                        </span>
+                      </div>
+                      <div class="movie-btns">
+                        <button class="watch-btn">
+                          <i class="fa-solid fa-play"></i> Watch now
+                        </button>
+                        <button id="plus-btn">
+                          <i class="fa-solid fa-plus"></i>
+                        </button>
+                      </div>
                     </div>
                   </div>
                 </div>
-              </div>
-            </ng-template>
+              </ng-template>
             }
           </owl-carousel-o>
         </div>
