feat: refactor search functionality to use updated query variable and it works now

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -155,17 +155,17 @@
         </div>
       </div>
 
-      <!-- <div class="search">
+      <div class="search">
         <input 
           type="text" 
           placeholder="Search for movies, series, and more" 
-          [(ngModel)]="search_value"
-          (keyup.enter)="onSearch(search_value)"
+          [(ngModel)]="query"
+          (keyup.enter)="onSearch()"
         />
-        <button class="search-btn" (click)="onSearch(search_value)">
+        <button class="search-btn" (click)="onSearch()">
           <i class="fa-solid fa-search"></i>
         </button>
-      </div> -->
+      </div>
 
       <div class="content-body">
         <div class="section-title">
