--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -7,35 +7,6 @@
   width: 80%;
 }
 
-.sidebar {
-  border-right: 1px solid #333; // Darker border for subtle separation
-  height: 100vh;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start; // Align items to the top
-  font-family: "Roboto", sans-serif;
-  font-size: 16px; // Slightly smaller font for modern look
-  position: sticky;
-  top: 0;
-  left: 0;
-  padding: 20px; // Add padding for spacing
-}
-
-.sidebar a {
-  color: white;
-}
-
-.sidebar h6 {
-  margin: 20px 0 10px 0; // Add spacing around headings
-  color: gray;
-  font-weight: 700;
-}
-
-.sidebar i {
-  margin-right: 10px; // Space between icon and text
-}
-
 .content {
   background-color: #1c1c1c;
   display: flex;
@@ -75,6 +46,7 @@
     h4 {
       background: linear-gradient(45deg, #fff, #ccc);
       -webkit-background-clip: text;
+      background-clip: text;
       -webkit-text-fill-color: transparent;
       font-size: 1.5rem;
       font-weight: 600;
@@ -546,6 +518,7 @@
         margin-bottom: 1rem;
         background: linear-gradient(to right, #fff, #ccc);
         -webkit-background-clip: text;
+        background-clip: text;
         -webkit-text-fill-color: transparent;
       }
 
